# unifi-cert

./: .gitignore  README.md  config.example.json  pyproject.toml  unifi_cert_deploy.py
